Fix stretch issue on cards

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -16,7 +16,6 @@ body {
 main {
   display: grid;
   margin: 0 25%;
-  justify-content: center;
   overflow: auto; /* Prevents the blog page from stretching to fit additional content */
 }
 
